<resources>
    <string name="app_name">CitorApp</string>
    <string name="value_phone_login">Nomor Telepon</string>
    <string name="value_password_login">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="value_name_register">Nama</string>
    <string name="value_email_register">E-Mail</string>
    <string name="value_phone_register">Nomor Telepon</string>
    <string name="value_password_register">Kata Sandi</string>
    <string name="value_password_validation_register">Masukkan Kata Sandi Lagi</string>
    <string name="value_password_verify_register">Konfirmasi Kata Sandi</string>
    <string name="verify">Verifikasi Akun</string>
    <string name="term1">Setujui</string>
    <string name="txt_open_term">Syarat &amp; Ketentuan</string>
    <string name="txt_term2">Layanan</string>
    <string name="txt_ask_account">Sudah punya akun?</string>
    <string name="resend_otp">Kirim Ulang</string>
    <string name="txt_ask_resend_otp">Belum dapat kode verifikasi?</string>
    <string name="txt_verify_otp">Verifikasi OTP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Masuk</string>
    <string name="tab_text_2">Daftar</string>
    <string name="value_email_login">E-Mail</string>
    <string name="txt_example_washer">Jaya Makmur Wash</string>
    <string name="txt_example_washer_address">Jl. M.T. Haryono 13</string>
    <string name="txt_look_washer_map">Buka di Maps</string>
    <string name="txt_exampe_name_washer">Achmad Wicaksono</string>
    <string name="txt_example_role_washer">Master washer</string>
    <string name="first_type_wash">Layanan Pencucian Dasar</string>
    <string name="choose">Pilih</string>
    <string name="second_type_wash">Layanan Pencucian Dasar dan Tingkat Lanjut</string>
    <string name="value_name_profile">Value Name Profile</string>
    <string name="change_profile">Ubah Profil</string>
    <string name="change_password">Ganti Kata Sandi</string>
    <string name="help">Bantuan</string>
    <string name="privacy_policy">Kebijakan Privasi</string>
    <string name="logout">Keluar</string>
    <string name="txt_send_otp">Kirim Kode</string>
    <string name="back">Kembali</string>
    <string name="tab_vendor_text_1">Layanan</string>
    <string name="tab_vendor_text_2">Informasi</string>
    <string name="example_ask_email">Apakah benar nadyafadhila@gmail.com berikut merupakan e-mail Anda?</string>
    <string name="example_des_email">Kami akan mengirimkan 4 digit kode verifikasi. E-Mail Kode verifikasi dapat melalui bagian Spam/Promosi</string>
    <string name="input_code">Masukkan Kode Verifikasi</string>
    <string name="operation_hour">JAM OPERASIONAL</string>
    <string name="monday">Senin</string>
    <string name="value_monday_hour">08.00 – 16.00 WIB</string>
    <string name="tuesday">Selasa</string>
    <string name="value_tuesday_hour">08.00 – 16.00 WIB</string>
    <string name="wednesday">Rabu</string>
    <string name="value_wednesday_hour">08.00 – 16.00 WIB</string>
    <string name="thursday">Kamis</string>
    <string name="value_thursday_hour">08.00 – 16.00 WIB</string>
    <string name="friday">Jumat</string>
    <string name="value_friday_hour">08.00 – 16.00 WIB</string>
    <string name="saturday">Sabtu</string>
    <string name="value_saturday_hour">TUTUP</string>
    <string name="sunday">Minggu</string>
    <string name="value_sunday_hour">TUTUP</string>
    <string name="verify_success">Verifikasi Sukses!</string>
    <string name="otp_already_send">Kode OTP telah dikirim</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="history">Aktivitas Saya</string>
    <string name="home">Beranda</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="layanan">Layanan</string>
    <string name="teratas">Teratas</string>
    <string name="terdekat">Terdekat</string>
    <string name="voucher">Voucher</string>
    <string name="posisi_kamu">Posisi Kamu</string>
    <string name="jl_mt_haryono">Jl. MT Haryono</string>
    <string name="jaya_makmur_wash">Jaya Makmur Wash</string>
    <string name="dekat">Terdekat</string>
    <string name="alamat_ex">Jl. Gajayana XI A</string>
    <string name="pembayaran">Pembayaran berhasil! Silahkan menuju “Jaya Abadi Motor Wash” untuk mencuci motor kamu!</string>
    <string name="booking">Waktu Pemesanan</string>
    <string name="booking2">Silahkan memilih waktu yang tersedia untuk dipesan</string>
    <string name="selengkapnya">selengkapnya</string>
    <string name="berjalan">berjalan</string>
    <string name="try_again">Silahkan Coba Lagi</string>
    <string name="email_pass_not_match">Maaf Email / Kata Sandi Anda Salah</string>
    <string name="email_not_registered">Maaf Email Anda Belum Terdaftar</string>
    <string name="confirm_logout">Apakah Anda Yakin Ingin Keluar?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="titik_dua">:</string>
    <string name="kode1">USR-009000</string>
    <string name="detailing">DETAILING</string>
    <string name="waktu1">08.00 - 10.00</string>
    <string name="metode1">pilih metode</string>
    <string name="konfirmasi_pembayaran">Konfirmasi Pembayaran</string>
    <string name="rangkuman">Rangkuman Pesanan</string>
    <string name="nama_cuci_motor">Nama Cuci Motor</string>
    <string name="kode_pesanan">Kode Pesanan</string>
    <string name="jenis_layanan">Jenis Layanan</string>
    <string name="waktu_pemesanan">Waktu Pemesanan</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="harga_pesan">Harga</string>
    <string name="poin_pesan">Poin</string>
    <string name="harga1">15.000,-</string>
    <string name="poin1">5</string>
    <string name="text_kode_pembayaran">Kode Pembayaran</string>
    <string name="kode_pemb">0</string>
    <string name="pilih">Pilih</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="shopeepay">ShopeePay</string>
    <string name="ovo">OVO</string>
    <string name="waktu_pesan">Waktu Pemesanan</string>
    <string name="pilihan_waktu_pemesanan">Silahkan memilih waktu yang tersedia untuk dipesan</string>
    <string name="dapat_dipesan">Dapat dipesan</string>
    <string name="penuh">Penuh</string>
    <string name="ask_email_1">Apakah benar</string>
    <string name="ask_email_2">merupakan e-mail Anda?</string>
    <string name="cuci_dimana">Mau mencuci dimana hari ini ?</string>
    <string name="apa_kabar">Apa Kabar Hari Ini ?</string>
    <string name="nama_user">Dila</string>
    <string name="hi">Hai,</string>
    <string name="point_user">10</string>
    <string name="poin_kamu">Poin Kamu</string>
    <string name="status_buka">Buka Hari Ini</string>
    <string-array name="area_category">
        <item>Buka</item>
        <item>Tutup</item>
    </string-array>
    <string name="otp_not_match">Kode OTP tidak cocok</string>
    <string name="example_text_history">Pencucian motor pada Suka Makmur sedang berjalan</string>
    <string name="txt_detail_history">Selengkapnya...</string>
    <string name="txt_complete_payment">Pembayaran Telah Berhasil!</string>
    <string name="harga">15.000</string>
    <string name="on_progress">Sedang Berjalan</string>
    <string name="selesai">Selesai</string>
    <string name="msg_loading">Loading...</string>

    <string-array name="uploadImages">
        <item>Pick from gallery</item>
        <item>Click from camera</item>
        <item>Remove image</item>
    </string-array>

    <string-array name="itemIds">
        <item>gallery_image</item>
        <item>camera_image</item>
        <item>remove_image</item>
    </string-array>
    <string name="title_modal_choose_time">Apakah Anda Yakin Ingin Memilih Jam ini?</string>
    <string name="message_modal_choose_time">Anda Tidak Bisa Memilih Jam Ini Selama 10 Menit Jika Melakukan Pembatalan Pesanan</string>
    <string name="support">Bantuan</string>
    <string name="support_caption">Dengan senang hati memberikan pelayanan terbaik untuk Anda</string>
    <string name="support_instagram">citor.official</string>
    <string name="support_number">+62 812 32 590 761</string>
    <string name="support_email">citorapps@gmail.com</string>

</resources>