<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".home.detailVendor.VendorScheduleFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operation_hour"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:text="@string/monday"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:text="@string/tuesday"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:text="@string/wednesday"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:text="@string/thursday"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:text="@string/friday"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:text="@string/saturday"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sunday"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingStart="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_outline_time_black_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_outline_time_black_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/ic_outline_time_black_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/ic_outline_time_black_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/ic_outline_time_black_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/ic_outline_time_black_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/ic_outline_time_black_24dp"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value_monday_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/value_monday_hour"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:textColor="#69CE58" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value_tuesday_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/value_tuesday_hour"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:textColor="#69CE58" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value_wednesday_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/value_wednesday_hour"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:textColor="#69CE58" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value_thursday_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/value_thursday_hour"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:textColor="#69CE58" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value_friday_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/value_friday_hour"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:textColor="#69CE58" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value_saturday_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/value_saturday_hour"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:textColor="@android:color/holo_red_dark" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value_sunday_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/value_sunday_hour"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:textColor="@android:color/holo_red_dark" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>